--- a/app/src/main/res/layout/activity_sociodemographyinfo.xml
+++ b/app/src/main/res/layout/activity_sociodemographyinfo.xml
@@ -56,53 +56,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="@dimen/_15sdp"
-                        android:text="What is your present occupation?"
-                        android:textSize="@dimen/_15sdp"
-                        android:textStyle="bold" />
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/q5p1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/_20sdp"
-                        android:layout_marginEnd="@dimen/_20sdp"
-                        android:hint="Ans" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/_5sdp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="@dimen/_15sdp"
-                        android:text="If retired, what was your past occupation?"
-                        android:textSize="@dimen/_15sdp"
-                        android:textStyle="bold" />
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/q5p2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/_20sdp"
-                        android:layout_marginEnd="@dimen/_20sdp"
-                        android:hint="Ans" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/_5sdp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="@dimen/_15sdp"
-                        android:text="Your work associated with _____"
+                        android:text="Occupation: "
                         android:textSize="@dimen/_15sdp"
                         android:textStyle="bold" />
 
@@ -115,7 +69,7 @@
                         android:hint="--select one--">
 
                         <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                            android:id="@+id/q6p1"
+                            android:id="@+id/s1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="none" />
@@ -133,7 +87,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="@dimen/_15sdp"
-                        android:text="Do you frequently use staircase/elevator?"
+                        android:text="Does your work associate with _____"
                         android:textSize="@dimen/_15sdp"
                         android:textStyle="bold" />
 
@@ -146,13 +100,29 @@
                         android:hint="--select one--">
 
                         <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                            android:id="@+id/q6p2"
+                            android:id="@+id/s2"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="none" />
 
                     </com.google.android.material.textfield.TextInputLayout>
+                </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_5sdp"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textStyle="bold"
+                        android:text="Housing"
+                        android:textAlignment="center"
+                        android:textSize="@dimen/_20sdp"
+                        android:layout_margin="@dimen/_5sdp"
+                        android:padding="@dimen/_5sdp"
+                        />
                 </LinearLayout>
 
                 <LinearLayout
@@ -178,7 +148,7 @@
                         android:hint="--select one--">
 
                         <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                            android:id="@+id/q7p1"
+                            android:id="@+id/s3"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="none" />
@@ -196,12 +166,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="@dimen/_15sdp"
-                        android:text="Which floor do you live on?"
+                        android:text="Which floor do you live in?"
                         android:textSize="@dimen/_15sdp"
                         android:textStyle="bold" />
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/q7p2"
+                        android:id="@+id/s4"
                         android:inputType="number"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -209,6 +179,39 @@
                         android:layout_marginEnd="@dimen/_20sdp"
                         android:hint="Ans" />
                 </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_5sdp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="@dimen/_15sdp"
+                        android:text="Do you frequently use staircases?"
+                        android:textSize="@dimen/_15sdp"
+                        android:textStyle="bold" />
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_20sdp"
+                        android:layout_marginEnd="@dimen/_20sdp"
+                        android:hint="--select one--">
+
+                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                            android:id="@+id/s5"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="none" />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                </LinearLayout>
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -233,7 +236,7 @@
                         android:hint="--select one--">
 
                         <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                            android:id="@+id/q8"
+                            android:id="@+id/s6"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="none" />
@@ -252,7 +255,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="@dimen/_15sdp"
-                        android:text="Position during prayer ____"
+                        android:text="Prayer position: "
                         android:textSize="@dimen/_15sdp"
                         android:textStyle="bold" />
 
@@ -265,7 +268,7 @@
                         android:hint="--select one--">
 
                         <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                            android:id="@+id/q9"
+                            android:id="@+id/s7"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="none" />
@@ -274,60 +277,7 @@
 
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/_5sdp"
-                    android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="@dimen/_15sdp"
-                        android:text="Do you actively participate in sports before?"
-                        android:textSize="@dimen/_15sdp"
-                        android:textStyle="bold" />
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/_20sdp"
-                        android:layout_marginEnd="@dimen/_20sdp"
-                        android:hint="--select one--">
-
-                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                            android:id="@+id/q16p1"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="none" />
-
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/_5sdp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="@dimen/_15sdp"
-                        android:text="If Yes, mention the affected side"
-                        android:textSize="@dimen/_15sdp"
-                        android:textStyle="bold" />
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/q16p2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/_20sdp"
-                        android:layout_marginEnd="@dimen/_20sdp"
-                        android:hint="Ans" />
-                </LinearLayout>
 
                 <Button
                     android:id="@+id/savesocioinfo"
