--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:hint="Enter Mobile"
-        android:inputType="textPersonName"
+        android:inputType="number"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
