--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -50,14 +50,31 @@
                 android:layout_gravity="center"
                 android:src="@drawable/prof"></ImageView>
 
-            <TextView
-                android:id="@+id/phone"
-                android:layout_width="196dp"
-                android:layout_height="39dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/_20sdp"
-                android:text=""
-                android:textSize="20sp" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/phone"
+                    android:layout_width="196dp"
+                    android:layout_height="39dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="@dimen/_20sdp"
+                    android:text=""
+                    android:textSize="20sp" />
+                <Button
+                    android:id="@+id/updatephone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Update Phone Number"
+                    android:backgroundTint="@color/teal_700"
+                    android:textAllCaps="false"
+                    android:layout_marginLeft="@dimen/_20sdp"
+                    android:textSize="@dimen/_10sdp"
+                    android:layout_gravity="center"
+                    />
+            </LinearLayout>
+
         </LinearLayout>
 
         <ScrollView
