--- a/app/src/main/res/layout/activity_sociodemographyinfo.xml
+++ b/app/src/main/res/layout/activity_sociodemographyinfo.xml
@@ -87,7 +87,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="@dimen/_15sdp"
-                        android:text="Does your work associate with _____"
+                        android:text="Does your work associate with _____?  (Select all that apply}"
                         android:textSize="@dimen/_15sdp"
                         android:textStyle="bold" />
 
@@ -117,11 +117,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textStyle="bold"
-                        android:text="Housing"
-                        android:textAlignment="center"
-                        android:textSize="@dimen/_20sdp"
-                        android:layout_margin="@dimen/_5sdp"
-                        android:padding="@dimen/_5sdp"
+                        android:text="Housing: "
+                        android:textSize="@dimen/_15sdp"
+                        android:layout_marginLeft="@dimen/_15sdp"
+                        android:paddingTop="@dimen/_5sdp"
                         />
                 </LinearLayout>
 
